--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Black+Han+Sans&family=Bree+Serif&family=Darker+Grotesque:wght@300..900&family=Dhurjati&family=Edu+NSW+ACT+Foundation:wght@400..700&family=Fugaz+One&family=Inter:wght@100..900&family=Modak&family=Monoton&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Play:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Reem+Kufi+Fun:wght@400..700&family=Seymour+One&family=Signika+Negative:wght@300..700&family=Sofadi+One&family=Stylish&family=Teko:wght@300..700&family=Truculenta:opsz,wght@12..72,100..900&display=swap');
 
 
+.category-button {
+  margin: 10px;
+  height: 50px;
+  text-align: left;
+  /* background: linear-gradient(90deg, #FFD700 0%, #FFA500 100%); */
+  color: white;
+  font-weight: bold;
+  text-transform: none;
+}
+
+.category-button-container {
+  display: flex;
+  overflow: hidden;
+}
+
 #title-pusat-kerupuk {
   font-family: "Black Han Sans", sans-serif;
   font-weight: 400;
