--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
   text-transform: none;
 }
 
+#demo-simple-select-autowidth-label {
+  margin: -7px;
+  color: white;
+}
+
 .category-button-container {
   display: flex;
   overflow: hidden;
